@@ -635,8 +635,6 @@ BEGIN
                     295,106,10
     CONTROL         "Static",IDC_LTIME,"Static",SS_SIMPLE | WS_GROUP,104,317,
                     106,10
-    CTEXT           "Test Test Test",IDC_STATIC_PWHSTATUS,6,221,203,21,0,
-                    WS_EX_STATICEDGE
     PUSHBUTTON      "Show Password History",IDC_SHOW_PWHIST,214,220,60,21,
                     BS_MULTILINE
     CONTROL         "",IDC_BOTTOM_HIDEABLE,"Static",SS_ETCHEDHORZ | NOT 
@@ -653,8 +651,7 @@ BEGIN
                     UDS_ARROWKEYS | UDS_HOTTRACK,339,21,10,14,
                     WS_EX_CLIENTEDGE
     CONTROL         "",IDC_PWHISTORY_LIST,"SysListView32",LVS_REPORT | 
-                    LVS_ALIGNLEFT | LVS_NOSCROLL | WS_BORDER | WS_TABSTOP,
-                    288,87,230,54
+                    LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,288,87,230,54
     PUSHBUTTON      "Copy",IDC_COPY_OLDPW_TO_CLIPBOARD,378,157,50,14
     CONTROL         "",IDC_RIGHT_HIDEABLE,"Static",SS_ETCHEDVERT | NOT 
                     WS_VISIBLE,520,51,1,266
@@ -890,39 +887,57 @@ BEGIN
                     IDC_STATIC,123,94,145,8
 END
 
-
 IDD_EXPORT_TEXTX DIALOGEX 0, 0, 223, 346
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Export Text Extra"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CONTROL         "Restrict to a subset of entries:",IDC_EXPORTX_SUBGROUP,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,8,9,114,9
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,8,9,
+                    114,9
     LTEXT           "where",IDC_STATIC,18,22,24,8
-    COMBOBOX        IDC_EXPORTX_SUBGROUP_OBJECT,43,22,81,73,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_EXPORTX_SUBGROUP_FUNCTION,129,22,81,86,CBS_DROPDOWNLIST | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_EXPORTX_SUBGROUP_OBJECT,43,22,81,73,CBS_DROPDOWNLIST | 
+                    CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_EXPORTX_SUBGROUP_FUNCTION,129,22,81,86,
+                    CBS_DROPDOWNLIST | CBS_NOINTEGRALHEIGHT | WS_VSCROLL | 
+                    WS_TABSTOP
     LTEXT           "the following text:",IDC_STATIC,18,37,97,8
-    EDITTEXT        IDC_EXPORTX_SUBGROUP_NAME,20,47,127,12,ES_AUTOHSCROLL | WS_DISABLED
-    CONTROL         "Case  Sensitive",IDC_EXPORTX_SUBGROUP_CASE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,21,62,65,10
+    EDITTEXT        IDC_EXPORTX_SUBGROUP_NAME,20,47,127,12,ES_AUTOHSCROLL | 
+                    WS_DISABLED
+    CONTROL         "Case  Sensitive",IDC_EXPORTX_SUBGROUP_CASE,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,21,62,65,10
     LTEXT           "Include the following fields:",IDC_STATIC,9,83,97,8
-    CONTROL         "Group/Title",IDC_EXPORTX_GROUP_TITLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,94,119,10
-    CONTROL         "User",IDC_EXPORTX_USER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,108,119,10
-    CONTROL         "Notes",IDC_EXPORTX_NOTES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,122,119,10
-    CONTROL         "Password",IDC_EXPORTX_PASSWORD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,136,119,10
-    CONTROL         "Entry Creation time",IDC_EXPORTX_CTIME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,23,189,119,10
+    CONTROL         "Group/Title",IDC_EXPORTX_GROUP_TITLE,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,94,119,10
+    CONTROL         "User",IDC_EXPORTX_USER,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,108,119,10
+    CONTROL         "Notes",IDC_EXPORTX_NOTES,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,122,119,10
+    CONTROL         "Password",IDC_EXPORTX_PASSWORD,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,136,119,10
+    CONTROL         "Entry Creation time",IDC_EXPORTX_CTIME,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,23,189,119,10
     CONTROL         "Entry Password Modification time",IDC_EXPORTX_PMTIME,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,23,205,119,10
-    CONTROL         "Entry Last Access time",IDC_EXPORTX_ATIME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,23,221,119,10
-    CONTROL         "Entry Password Expiry time",IDC_EXPORTX_LTIME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,23,237,119,10
-    CONTROL         "Entry Modification time",IDC_EXPORTX_RMTIME,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,23,253,119,14
-    CONTROL         "Url",IDC_EXPORTX_URL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,150,119,10
-    CONTROL         "Autotype",IDC_EXPORTX_AUTOTYPE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,164,119,10
-    CONTROL         "Password History",IDC_EXPORTX_PWHIST,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,17,285,119,10
+    CONTROL         "Entry Last Access time",IDC_EXPORTX_ATIME,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,23,221,119,10
+    CONTROL         "Entry Password Expiry time",IDC_EXPORTX_LTIME,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,23,237,119,10
+    CONTROL         "Entry Modification time",IDC_EXPORTX_RMTIME,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,23,253,119,14
+    CONTROL         "Url",IDC_EXPORTX_URL,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,150,119,10
+    CONTROL         "Autotype",IDC_EXPORTX_AUTOTYPE,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,17,164,119,10
+    CONTROL         "Password History",IDC_EXPORTX_PWHIST,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,17,285,119,10
     DEFPUSHBUTTON   "OK",IDOK,15,320,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,85,320,50,14
     PUSHBUTTON      "&Help",ID_HELP,155,320,50,14
-    PUSHBUTTON      "Select all time fields",IDC_EXPORTX_SETTIMES,149,186,43,24,BS_MULTILINE
-    PUSHBUTTON      "Clear all time fields",IDC_EXPORTX_CLEARTIMES,149,250,43,24,BS_MULTILINE
+    PUSHBUTTON      "Select all time fields",IDC_EXPORTX_SETTIMES,149,186,43,
+                    24,BS_MULTILINE
+    PUSHBUTTON      "Clear all time fields",IDC_EXPORTX_CLEARTIMES,149,250,
+                    43,24,BS_MULTILINE
     PUSHBUTTON      "Select all fields",IDC_EXPORTX_SETALL,50,299,50,14
     PUSHBUTTON      "Clear all fields",IDC_EXPORTX_CLEARALL,120,299,50,14
     GROUPBOX        "Time Related Fields",IDC_STATIC,16,176,181,104
